--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "docker_web_app",
+  "name": "docker_node_app",
   "version": "1.0.0",
   "description": "Node.js on Docker",
   "author": "First Last <first.last@example.com>",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js",
+    "start.dev": "nodemon"
   },
   "dependencies": {
-    "express": "^4.16.1"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
